fix(top nav): color contrast on top nav on various pages fixed.

--- a/app/styles/contact.css
+++ b/app/styles/contact.css
@@ -2,15 +2,12 @@ body {
   color: black;
 }
 
-[data-primary-list] {
-  color: black;
+[data-primary-nav-text] {
+  color: white;
 }
 
-[data-primary-nav-text] {
-  font-size: 24px;
-  color: black;
-  font-weight: bolder;
-  text-decoration: none;
+[data-primary-list] {
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .title {
